kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
      containers:
        - name: api
          image: gcr.io/remote-how-ai/github.com/ai-ai-boyzz/medrzec-ai
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data"
              name: data
