kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api
    networking.gke.io/v1beta1.FrontendConfig: api
    cloud.google.com/backend-config: '{"default": "api"}'
    networking.gke.io/managed-certificates: api
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 80
